--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 *.itempackage
 *.sicpackage
 
+# Ignore everything under docker
+/docker/*
+
 #Ignore thumbnails created by Windows
 Thumbs.db
 #Ignore files built by Visual Studio
