--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,5 @@
 # If you intend to push to a private registry, fill that in here.
-REGISTRY=
+REGISTRY=adminb
 COMPOSE_PROJECT_NAME=hack
 
 # Configure host names, which will be used to configure Traefik proxy routing.
@@ -11,7 +11,7 @@ HOST_DOMAIN=hack.localhost
 # Sitecore Docker registry and platform version.
 # The ltsc2019-based images are used by default here.
 SITECORE_DOCKER_REGISTRY=scr.sitecore.com/sxp/
-SITECORE_VERSION=10.1.0-ltsc2019
+SITECORE_VERSION=10.1-ltsc2019
 SPE_VERSION=6.2-1809
 SXA_VERSION=10.1-1809
 
