Add role limits, set solr to solrcloud

--- a/docker/.env
+++ b/docker/.env
@@ -13,7 +13,7 @@ HOST_DOMAIN=hack.localhost
 SITECORE_DOCKER_REGISTRY=scr.sitecore.com/sxp/
 SITECORE_VERSION=10.1-ltsc2019
 SPE_VERSION=6.2-1809
-SXA_VERSION=10.1-1809
+
 
 # The sitecore\admin and SQL 'sa' account passwords for this environment are configurable here.
 SITECORE_ADMIN_PASSWORD=b
@@ -55,3 +55,4 @@ MEDIA_REQUEST_PROTECTION_SHARED_SECRET=AReallyRandomThingToTypeHeyItsLate
 MEM_LIMIT_SQL=
 MEM_LIMIT_CM=
 MEM_LIMIT_SOLR=
+MEM_LIMIT_ROLES=
