--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -46,6 +46,8 @@ services:
     ports:
       - "8984:8983"
     image: ${SITECORE_DOCKER_REGISTRY}nonproduction/solr:8.4.0-${SITECORE_VERSION}
+    environment:
+      SOLR_MODE: solrcloud
     volumes:
       - type: bind
         source: .\solr-data
