--- a/src/Project/code/Project.Common.csproj
+++ b/src/Project/code/Project.Common.csproj
@@ -44,6 +44,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -53,6 +56,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Mvc.5.2.7.0.Fakes">
+      <HintPath>FakesAssemblies\System.Web.Mvc.5.2.7.0.Fakes.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -89,6 +95,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\MvcLayout.cshtml" />
+    <Content Include="Common.module.json" />
+    <Fakes Include="Fakes\System.Web.Mvc.fakes" />
     <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
