--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -12,16 +12,16 @@ services:
   # The solution build image is added here so it can be referenced as a build dependency
   # for the images which use its output. Setting "scale: 0" means docker-compose will not
   # include it in the running environment. See Dockerfile for more details.
-  solution:
-    image: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}
-    build:
-      context: ../
-      args:
-        BUILD_CONFIGURATION: ${BUILD_CONFIGURATION}
-        BUILD_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-dotnetsdk:${VERSION:-latest}
-    depends_on:
-      - dotnetsdk
-    scale: 0
+  # solution:
+  #   image: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}
+  #   build:
+  #     context: ../
+  #     args:
+  #       BUILD_CONFIGURATION: ${BUILD_CONFIGURATION}
+  #       BUILD_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-dotnetsdk:${VERSION:-latest}
+  #   depends_on:
+  #     - dotnetsdk
+  #   scale: 0
 
   traefik:
     volumes:
@@ -36,7 +36,8 @@ services:
       context: ./build/mssql
       args:
         PARENT_IMAGE: ${SITECORE_DOCKER_REGISTRY}sitecore-xp0-mssql:${SITECORE_VERSION}
-        SPE_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/spe-assets:${SPE_VERSION}        
+        SPE_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/spe-assets:${SPE_VERSION}
+        HEADLESS_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/sitecore-headless-services-xp1-assets:${HEADLESS_VERSION}          
     volumes:
       - ${LOCAL_DATA_PATH}\mssql:c:\data
     mem_limit: ${MEM_LIMIT_SQL:-2GB}
@@ -80,11 +81,13 @@ services:
       context: ./build/cm
       args:
         PARENT_IMAGE: ${SITECORE_DOCKER_REGISTRY}sitecore-xp0-cm:${SITECORE_VERSION}
-        SOLUTION_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}
-        SPE_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/spe-assets:${SPE_VERSION}        
+        # SOLUTION_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}
+        SPE_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/spe-assets:${SPE_VERSION}
+        HEADLESS_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/sitecore-headless-services-xp1-assets:${HEADLESS_VERSION}         
         TOOLS_IMAGE: ${TOOLS_IMAGE}
-    depends_on:
-      - solution
+        MGMT_IMAGE: ${MGMT_IMAGE}
+    # depends_on:
+     # - solution
     volumes:
       - ${LOCAL_DEPLOY_PATH}\platform:C:\deploy
       - ${LOCAL_DATA_PATH}\cm:C:\inetpub\wwwroot\App_Data\logs
@@ -106,17 +109,17 @@ services:
       context: ./build/xconnect
       args:
         PARENT_IMAGE: ${SITECORE_DOCKER_REGISTRY}sitecore-xp0-xconnect:${SITECORE_VERSION}
-        SOLUTION_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}        
+        # SOLUTION_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}        
         TOOLS_IMAGE: ${TOOLS_IMAGE}
     environment: 
       SITECORE_LICENSE_LOCATION: C:\license
-    depends_on:
-      - solution      
+    # depends_on:
+      # - solution      
     volumes:
       - ${HOST_LICENSE_FOLDER}:C:\license
       - ${LOCAL_DEPLOY_PATH}\xconnect:C:\deploy
     entrypoint: powershell -Command "& C:\tools\entrypoints\iis\Development.ps1"
-    mem_limit: ${MEM_LIMIT_ROLES:-1GB}
+  #  mem_limit: ${MEM_LIMIT_ROLES:-1GB}
 
   xdbsearchworker:
     image: ${REGISTRY}${COMPOSE_PROJECT_NAME}-xp0-xdbsearchworker:${VERSION:-latest}
