add CET to dockerk compose

--- a/docker/.env
+++ b/docker/.env
@@ -2,6 +2,8 @@
 REGISTRY=adminb
 COMPOSE_PROJECT_NAME=hack
 
+CET_VERSION=1.0.0
+
 # Configure host names, which will be used to configure Traefik proxy routing.
 CM_HOST=cm.hack.localhost
 ID_HOST=id.hack.localhost
