--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -36,7 +36,8 @@ services:
       context: ./build/mssql
       args:
         PARENT_IMAGE: ${SITECORE_DOCKER_REGISTRY}sitecore-xp0-mssql:${SITECORE_VERSION}
-        SPE_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/spe-assets:${SPE_VERSION}        
+        SPE_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/spe-assets:${SPE_VERSION}  
+        CET_IMAGE: estockwellalpert/contentexporttool:${CET_VERSION}        
     volumes:
       - ${LOCAL_DATA_PATH}\mssql:c:\data
     mem_limit: ${MEM_LIMIT_SQL:-2GB}
@@ -83,6 +84,7 @@ services:
         SOLUTION_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}
         SPE_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/spe-assets:${SPE_VERSION}        
         TOOLS_IMAGE: ${TOOLS_IMAGE}
+        CET_IMAGE: estockwellalpert/contentexporttool:${CET_VERSION}
     depends_on:
       - solution
     volumes:
