--- a/src/Feature/Movies/code/items/templates/Movies/Movie Recommendations.yml
+++ b/src/Feature/Movies/code/items/templates/Movies/Movie Recommendations.yml
@@ -6,7 +6,7 @@ Path: /sitecore/templates/Feature/Movies/Movie Recommendations
 SharedFields:
 - ID: "06d5295c-ed2f-4a54-9bf2-26228d113318"
   Hint: __Icon
-  Value: Apps/32x32/Chats.png
+  Value: apps/32x32/chats.png
 - ID: "12c33f3f-86c5-43a5-aeb4-5598cec45116"
   Hint: __Base template
   Value: "{1930BBEB-7805-471A-A3BE-4858AC7CF696}"
@@ -20,11 +20,11 @@ Languages:
       Value: 20210306T064349Z
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "b0df87d9-749d-4567-934a-4d39d4592b43"
+      Value: "45b02a77-0f77-4ab8-a098-00cf6475143a"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20210306T080407Z
+      Value: 20210306T081241Z
