--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -12,16 +12,16 @@ services:
   # The solution build image is added here so it can be referenced as a build dependency
   # for the images which use its output. Setting "scale: 0" means docker-compose will not
   # include it in the running environment. See Dockerfile for more details.
-  # solution:
-  #   image: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}
-  #   build:
-  #     context: ../
-  #     args:
-  #       BUILD_CONFIGURATION: ${BUILD_CONFIGURATION}
-  #       BUILD_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-dotnetsdk:${VERSION:-latest}
-  #   depends_on:
-  #     - dotnetsdk
-  #   scale: 0
+  solution:
+    image: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}
+    build:
+      context: ..
+      args:
+        BUILD_CONFIGURATION: ${BUILD_CONFIGURATION}
+        BUILD_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-dotnetsdk:${VERSION:-latest}
+    depends_on:
+      - dotnetsdk
+    scale: 0
 
   traefik:
     volumes:
