--- a/docker/.env
+++ b/docker/.env
@@ -23,6 +23,8 @@ SITECORE_ADMIN_PASSWORD=b
 SQL_SA_PASSWORD=bIQW96tiDoAQ5wRhppp
 
 # Other supporting images, including Sitecore modules and Docker tools
+MANAGEMENT_SERVICES_IMAGE=scr.sitecore.com/sxp/modules/sitecore-management-services-xp1-assets:2.0.0-1809
+HEADLESS_SERVICES_IMAGE=scr.sitecore.com/sxp/modules/jss-xp1-assets:15.0.1-1809
 TOOLS_IMAGE=scr.sitecore.com/tools/sitecore-docker-tools-assets:10.0.0-1809
 TRAEFIK_IMAGE=traefik:v2.2.0-windowsservercore-1809
 MGMT_IMAGE=scr.sitecore.com/sxp/modules/sitecore-management-services-xp1-assets:3.0.0-1809
