--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -12,30 +12,17 @@ services:
   # The solution build image is added here so it can be referenced as a build dependency
   # for the images which use its output. Setting "scale: 0" means docker-compose will not
   # include it in the running environment. See Dockerfile for more details.
-  # solution:
-  #   image: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}
-  #   build:
-  #     context: ../
-  #     args:
-  #       BUILD_CONFIGURATION: ${BUILD_CONFIGURATION}
-  #       BUILD_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-dotnetsdk:${VERSION:-latest}
-  #   depends_on:
-  #     - dotnetsdk
-  #   scale: 0
+   solution:
+     image: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}
+     build:
+       context: ../
+       args:
+         BUILD_CONFIGURATION: ${BUILD_CONFIGURATION}
+         BUILD_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-dotnetsdk:${VERSION:-latest}
+     depends_on:
+       - dotnetsdk
+     scale: 0
   
-  # The solution build image is added here so it can be referenced as a build dependency
-  # for the images which use its output. Setting "scale: 0" means docker-compose will not
-  # include it in the running environment. See Dockerfile for more details.
-  solution:
-    image: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}
-    build:
-      context: .
-      args:
-        BUILD_CONFIGURATION: ${BUILD_CONFIGURATION}
-        BUILD_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-dotnetsdk:${VERSION:-latest}
-    depends_on:
-      - dotnetsdk
-    scale: 0
   
    # This is our custom image for an ASP.NET Core Rendering Host.
   # If target is 'debug', it will use the SDK image as parent and run 'dotnet watch.'
@@ -71,7 +58,7 @@ services:
     volumes:
       - ./traefik:C:/etc/traefik
     depends_on:
-      - cm
+      - rendering
     mem_limit: ${MEM_LIMIT_ROLES:-1GB}
 
   mssql:
@@ -82,7 +69,8 @@ services:
         PARENT_IMAGE: ${SITECORE_DOCKER_REGISTRY}sitecore-xp0-mssql:${SITECORE_VERSION}
         SPE_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/spe-assets:${SPE_VERSION}
         HEADLESS_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/sitecore-headless-services-xp1-assets:${HEADLESS_VERSION}          
-        CET_IMAGE: estockwellalpert/contentexporttool:${CET_VERSION}        
+        CET_IMAGE: estockwellalpert/contentexporttool:${CET_VERSION}     
+        HEADLESS_SERVICES_IMAGE: ${HEADLESS_SERVICES_IMAGE}        
     volumes:
       - ${LOCAL_DATA_PATH}\mssql:c:\data
     mem_limit: ${MEM_LIMIT_SQL:-2GB}
@@ -126,14 +114,16 @@ services:
       context: ./build/cm
       args:
         PARENT_IMAGE: ${SITECORE_DOCKER_REGISTRY}sitecore-xp0-cm:${SITECORE_VERSION}
-        # SOLUTION_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}
+        SOLUTION_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-solution:${VERSION:-latest}
         SPE_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/spe-assets:${SPE_VERSION}
         HEADLESS_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/sitecore-headless-services-xp1-assets:${HEADLESS_VERSION}         
         TOOLS_IMAGE: ${TOOLS_IMAGE}
         MGMT_IMAGE: ${MGMT_IMAGE}
         CET_IMAGE: estockwellalpert/contentexporttool:${CET_VERSION}
-    # depends_on:
-     # - solution
+        MANAGEMENT_SERVICES_IMAGE: ${MANAGEMENT_SERVICES_IMAGE}
+        HEADLESS_SERVICES_IMAGE: ${HEADLESS_SERVICES_IMAGE}
+     depends_on:
+      - solution
     volumes:
       - ${LOCAL_DEPLOY_PATH}\platform:C:\deploy
       - ${LOCAL_DATA_PATH}\cm:C:\inetpub\wwwroot\App_Data\logs
