--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -131,7 +131,7 @@ services:
       - ${HOST_LICENSE_FOLDER}:c:\license
     environment: 
       SITECORE_LICENSE_LOCATION: c:\license\
-    mem_limit: ${MEM_LIMIT_ROLES:-1GB}
+    mem_limit: ${MEM_LIMIT_XDBSEARCH:-1GB}
 
   xdbautomationworker:
     image: ${REGISTRY}${COMPOSE_PROJECT_NAME}-xp0-xdbautomationworker:${VERSION:-latest}
