--- a/src/rendering/appsettings.Development.json
+++ b/src/rendering/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "Sitecore": {
-    "InstanceUri": "https://cm.RenderingHost.localhost",
+    "InstanceUri": "https://cm.hack.localhost",
     "LayoutServicePath": "/sitecore/api/layout/render/jss",
     "DefaultSiteName": "Examples",
     "ApiKey": "2db532bb-fb05-499a-b925-3feffab58cb1",
