--- a/src/Feature/Movies/code/items/templates/Movies/Movie/Data/Image.yml
+++ b/src/Feature/Movies/code/items/templates/Movies/Movie/Data/Image.yml
@@ -6,7 +6,7 @@ Path: /sitecore/templates/Feature/Movies/Movie/Data/Image
 SharedFields:
 - ID: "ab162cc0-dc80-4abf-8871-998ee5d7ba32"
   Hint: Type
-  Value: Image
+  Value: "Single-Line Text"
 - ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
   Hint: __Sortorder
   Value: 600
@@ -20,11 +20,11 @@ Languages:
       Value: 20210306T064259Z
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "374dbc27-fe92-45d2-a8e8-e71a059037ae"
+      Value: "ca755ad3-2133-45a8-a5b7-67e7f08bcef0"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20210306T064259Z
+      Value: 20210306T184539Z
