--- a/src/Project/code/Views/web.config
+++ b/src/Project/code/Views/web.config
@@ -16,6 +16,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="Sitecore.Mvc" />
         <add namespace="Sitecore.Mvc.Presentation" />
+        <add namespace="Feature.Movies.Models"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
