--- a/src/Feature/Movies/code/packages.config
+++ b/src/Feature/Movies/code/packages.config
@@ -8,15 +8,14 @@
   <package id="EnterpriseLibrary.TransientFaultHandling.ServiceBus" version="6.0.1304.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.TransientFaultHandling.WindowsAzure.Storage" version="6.0.1304.0" targetFramework="net48" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net48" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net48" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Base" version="1.0.2" targetFramework="net48" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Environment" version="1.0.2" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.5" targetFramework="net48" />
@@ -33,6 +32,7 @@
   <package id="Mvp.Xml" version="2.3.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net48" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net48" />
+  <package id="RazorGenerator.Mvc" version="2.4.9" targetFramework="net48" />
   <package id="SharpZipLib" version="1.3.0" targetFramework="net48" />
   <package id="Sitecore.Framework.Conditions" version="5.0.0" targetFramework="net48" />
   <package id="Sitecore.Framework.Data.Blobs" version="2.0.0" targetFramework="net48" />
@@ -40,8 +40,10 @@
   <package id="Sitecore.Kernel" version="10.1.0" targetFramework="net48" />
   <package id="Sitecore.Logging" version="10.1.0" targetFramework="net48" />
   <package id="Sitecore.Logging.Client" version="10.1.0" targetFramework="net48" />
+  <package id="Sitecore.Mvc" version="10.1.0" targetFramework="net48" />
   <package id="Sitecore.Nexus.Consumption" version="1.2.0" targetFramework="net48" />
   <package id="Sitecore.Nexus.Licensing" version="2.0.6" targetFramework="net48" />
+  <package id="Sitecore.Web" version="10.1.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.2" targetFramework="net48" />
@@ -52,4 +54,5 @@
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="WebActivatorEx" version="2.0.3" targetFramework="net48" />
 </packages>
