add CET to dockerk compose

--- a/docker/.env
+++ b/docker/.env
@@ -14,7 +14,7 @@ SITECORE_DOCKER_REGISTRY=scr.sitecore.com/sxp/
 SITECORE_VERSION=10.1-ltsc2019
 SPE_VERSION=6.2-1809
 HEADLESS_VERSION=16.0-1809
-
+CET_VERSION=1.0.0
 
 # The sitecore\admin and SQL 'sa' account passwords for this environment are configurable here.
 SITECORE_ADMIN_PASSWORD=b
