--- a/docker/docker-compose.override.yml
+++ b/docker/docker-compose.override.yml
@@ -37,7 +37,8 @@ services:
       args:
         PARENT_IMAGE: ${SITECORE_DOCKER_REGISTRY}sitecore-xp0-mssql:${SITECORE_VERSION}
         SPE_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/spe-assets:${SPE_VERSION}
-        HEADLESS_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/sitecore-headless-services-xp1-assets:${HEADLESS_VERSION}          
+        HEADLESS_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/sitecore-headless-services-xp1-assets:${HEADLESS_VERSION}    
+        CET_IMAGE: estockwellalpert/contentexporttool:${CET_VERSION}        
     volumes:
       - ${LOCAL_DATA_PATH}\mssql:c:\data
     mem_limit: ${MEM_LIMIT_SQL:-2GB}
@@ -86,6 +87,7 @@ services:
         HEADLESS_IMAGE: ${SITECORE_DOCKER_REGISTRY}modules/sitecore-headless-services-xp1-assets:${HEADLESS_VERSION}         
         TOOLS_IMAGE: ${TOOLS_IMAGE}
         MGMT_IMAGE: ${MGMT_IMAGE}
+        CET_IMAGE: estockwellalpert/contentexporttool:${CET_VERSION}
     # depends_on:
      # - solution
     volumes:
